# agy-connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
agy_connect/: __init__.py  adapter.py  checks.py  client.py  completion.py  config.py  constants.py  events.py  exceptions.py  health.py  history.py  logger.py  manager.py  process.py  queue.py  session.py  state.py  stream.py  types.py  utils.py
examples/: 01_simple_chatbot.py  02_streaming_chatbot.py  03_cli_chatbot.py  06_async_usage.py  07_brutal_test.py
tests/: __init__.py  test_adapter.py  test_chat.py  test_config.py  test_history.py  test_manager.py  test_state.py
